--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-PORT=3000
-DB_HOST=localhost
-DB_USER=tejas 
-DB_PASSWORD=Suhana7136
-DB_NAME=postgres
-DB_PORT=5432
+postgresql://shasan_userloc_db_user:DdQI6J0n5vnVi2PqftCxZ5e6bLCmOO1b@dpg-d1u0js49c44c73cgtll0-a.oregon-postgres.render.com/shasan_userloc_db
